Louisa mobile drawer UI fix (#2695)
* added horizontal and vertical padding in Mobile drawer

* vertical padding and horizontal padding work with large lists-need to fix padding w/out scrollbar

* all icons, links are aligned with the close button and shop icon on mobile

* horizontal and vertical paddings all equate to 3rem around Nav and utility links

* added padding to close button on l3 links, adjusted padding for social links

* fixed close button padding

--- a/assets/component-menu-drawer.css
+++ b/assets/component-menu-drawer.css
@@ -2,16 +2,14 @@
   position: initial;
 }
 
-.js menu-drawer > details > summary::before,
-.js menu-drawer > details[open]:not(.menu-opening) > summary::before {
+.js menu-drawer>details>summary::before,
+.js menu-drawer>details[open]:not(.menu-opening)>summary::before {
   content: '';
   position: absolute;
   cursor: default;
   width: 100%;
   height: calc(100vh - 100%);
-  height: calc(
-    var(--viewport-height, 100vh) - (var(--header-bottom-position, 100%))
-  );
+  height: calc(var(--viewport-height, 100vh) - (var(--header-bottom-position, 100%)));
   top: 100%;
   left: 0;
   background: rgba(var(--color-foreground), 0.5);
@@ -21,7 +19,7 @@
   transition: opacity 0s, visibility 0s;
 }
 
-menu-drawer > details[open] > summary::before {
+menu-drawer>details[open]>summary::before {
   visibility: visible;
   opacity: 1;
   transition: opacity var(--duration-default) ease,
@@ -39,35 +37,30 @@ menu-drawer > details[open] > summary::before {
   padding: 0;
   background-color: rgb(var(--color-background));
   overflow-x: hidden;
-  filter: drop-shadow(
-    var(--drawer-shadow-horizontal-offset) var(--drawer-shadow-vertical-offset)
-      var(--drawer-shadow-blur-radius)
-      rgba(var(--color-shadow), var(--drawer-shadow-opacity))
-  );
+  filter: drop-shadow(var(--drawer-shadow-horizontal-offset) var(--drawer-shadow-vertical-offset) var(--drawer-shadow-blur-radius) rgba(var(--color-shadow), var(--drawer-shadow-opacity)));
 }
 
 .js .menu-drawer {
   height: calc(100vh - 100%);
-  height: calc(
-    var(--viewport-height, 100vh) - (var(--header-bottom-position, 100%))
-  );
+  height: calc(var(--viewport-height, 100vh) - (var(--header-bottom-position, 100%)));
 }
 
-.js details[open] > .menu-drawer,
-.js details[open] > .menu-drawer__submenu {
+.js details[open]>.menu-drawer,
+.js details[open]>.menu-drawer__submenu {
   transition: transform var(--duration-default) ease,
     visibility var(--duration-default) ease;
 }
 
-.no-js details[open] > .menu-drawer,
-.js details[open].menu-opening > .menu-drawer,
-details[open].menu-opening > .menu-drawer__submenu {
+.no-js details[open]>.menu-drawer,
+.js details[open].menu-opening>.menu-drawer,
+details[open].menu-opening>.menu-drawer__submenu {
   transform: translateX(0);
   visibility: visible;
 }
 
 .js .menu-drawer__navigation .submenu-open {
-  visibility: hidden; /* hide menus from screen readers when hidden by submenu */
+  visibility: hidden;
+  /* hide menus from screen readers when hidden by submenu */
 }
 
 @media screen and (min-width: 750px) {
@@ -110,11 +103,11 @@ details[open].menu-opening > .menu-drawer__submenu {
   padding: 0;
 }
 
-.no-js .menu-drawer__navigation > ul > li {
+.no-js .menu-drawer__navigation>ul>li {
   border-bottom: 0.1rem solid rgba(var(--color-foreground), 0.04);
 }
 
-.no-js .menu-drawer__submenu ul > li {
+.no-js .menu-drawer__submenu ul>li {
   border-top: 0.1rem solid rgba(var(--color-foreground), 0.04);
 }
 
@@ -166,7 +159,7 @@ details[open].menu-opening > .menu-drawer__submenu {
   display: none;
 }
 
-.menu-drawer__menu-item > .icon-arrow {
+.menu-drawer__menu-item>.icon-arrow {
   position: absolute;
   right: 3rem;
   top: 50%;
@@ -223,17 +216,13 @@ details[open].menu-opening > .menu-drawer__submenu {
 }
 
 @media screen and (max-width: 749px) {
-  .header--has-account:where(
-      :not(.header--has-social):not(.header--has-localizations)
-    )
-    .menu-drawer__utility-links {
+  .header--has-account:where( :not(.header--has-social):not(.header--has-localizations)) .menu-drawer__utility-links {
     padding: 2rem;
   }
 }
 
 @media screen and (max-width: 989px) {
-  .header--has-localizations:where(:not(.header--has-social))
-    .menu-drawer__utility-links {
+  .header--has-localizations:where(:not(.header--has-social)) .menu-drawer__utility-links {
     padding: 3rem;
   }
 }
@@ -249,8 +238,7 @@ details[open].menu-opening > .menu-drawer__submenu {
 }
 
 .menu-drawer__utility-links:has(ul:empty) .menu-drawer__account,
-.menu-drawer__utility-links:has(.menu-drawer__localization)
-  .menu-drawer__account {
+.menu-drawer__utility-links:has(.menu-drawer__localization) .menu-drawer__account {
   margin: 0;
 }
 
